create github pages

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
   <title>Home</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -58,12 +59,34 @@
         </div>
     </div>
 
-    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#next"><i class="mbr-arrow-icon"></i></a></div>
+    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#contacts1-3"><i class="mbr-arrow-icon"></i></a></div>
 
 </section>
 
+<section class="engine"><a href="https://mobirise.ws/e">best website builder software</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-3" data-rv-view="8" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 30px;">
+    
+    <div class="container">
+        <div class="row">
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <div><a href="https://instagram.com/justintkamerman" class="socicon socicon-instagram mbr-iconfont mbr-iconfont-contacts1"></a></div>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Social Media</strong><br>Instagram: <a href="https://instagram.com/justintkamerman">@justintkamerman</a><br>Twitter (inactive): <a href="https://twitter.com/justintkamerman">@justintkamerman</a></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Contacts</strong><br>
+Email: <a href="mailto:info@justintkamerman.me">info@justintkamerman.me</a><br></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Links</strong><br><a href="http://www.valleybaptistchurch.com">Valley Baptist Church</a><br></p>
+            </div>
 
-  <section class="engine"><a href="https://mobirise.ws/l">free html web creator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+        </div>
+    </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
