create github pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section class="mbr-section mbr-section-hero mbr-section-full header2" id="header2-1" data-rv-view="3" style="background-color: rgb(46, 46, 46);">
+  <section class="mbr-section mbr-section-hero mbr-section-full header2" id="header2-1" data-rv-view="0" style="background-color: rgb(46, 46, 46);">
 
     
 
@@ -45,7 +45,7 @@
                                 <p>Valley Baptist Youth Band Leader | Tennis Player | Technology Genius</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-danger" href="https://mobirise.com">Instagram Profile</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-danger" href="https://instagram.com/justintkamerman">Instagram Profile</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
@@ -63,7 +63,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website builder software</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-3" data-rv-view="8" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 30px;">
+<section class="engine"><a href="https://mobirise.ws/k">develop free website</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-3" data-rv-view="3" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
